# hogcomparator

./: README.md
cplusplus/: CMakeLists.txt  com_obomprogramador_hog_HogComparator.cpp  com_obomprogramador_hog_HogComparator.h
java/: pom.xml
java/src/com/obomprogramador/hog/: HogComparator.java
